test/classes/initializers/error-parenthesless-initializer.good
error-parenthesless-initializer.chpl:5: error: an initializer cannot be declared without parentheses
