test/classes/initializers/error-parenthesless-initializer.chpl


class x {
  var v:int;
  proc init { writeln("x initializer"); }
}

var z = new x();
